# codectx

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
agents/: __init__.py  base_agent.py  beliefs.py  models.py  store.py
benchmarks/: harness.py  models.py  run.py
benchmarks/cases/helper_contract_change/: case.json
benchmarks/cases/helper_contract_change/after/: helpers.py
benchmarks/cases/helper_contract_change/before/: helpers.py  service.py
cli/: __init__.py  app.py  instructions.py  output.py
cli/commands/: __init__.py  graph.py  serve.py
clients/: __init__.py  context_http.py
context/: __init__.py  models.py  service.py
coordination/: __init__.py  models.py  store.py
detection/: __init__.py  context_manager.py  invalidation_engine.py
experiments/: __init__.py  harness.py
experiments/cases/body/: case.json
experiments/cases/body/app/: calc.after.py  calc.before.py  pipeline.after.py
experiments/cases/ctor/: case.json
experiments/cases/ctor/app/: models.after.py  models.before.py  (+1 more)
graph/: __init__.py  context_graph.py  dependency_graph.py  incremental_update.py  indexer.py  models.py  semantic_diff.py  symbol_graph.py
graph/languages/: __init__.py  base.py  python.py
invalidation/: __init__.py  engine.py  models.py
mcp_server/: __init__.py  server.py
scripts/: __init__.py  context_query.py  eval_invalidation.py  graph_build.py  graph_query.py  run_pipeline.py
server/: __init__.py  context_server.py  events.py  models.py
tests/: conftest.py  test_context_http_client.py  test_context_server.py  test_symbol_graph.py
