[project]
name = "async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "networkx>=3.6.1",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.34.0",
]
