[project]
name = "codectx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "networkx>=3.6.1",
    "pathspec>=1.0.4",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.4.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
codectx = "main:main"
